Füge Bewegungen hinzu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 <body onload="startGame()">
 
+<div style="text-align: center; width: 480px">
+    <button onmousedown="moveUp()" onmouseup="stopMove()">UP</button><br><br>
+    <button onmousedown="moveLeft()" onmouseup="stopMove()"><</button>
+    <button onmousedown="moveRight()" onmouseup="stopMove()">></button><br><br>
+    <button onmousedown="moveDown()" onmouseup="stopMove()">DOWN</button>
+</div>
+
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
