--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <style>
-        canvas {
-            border: 1px solid #d3d3d3;
-            background-color: #f1f1f1;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
+
     <title>Flappy Bird Clone</title>
 </head>
 <body onload="startGame()">
